--- a/.env_docker
+++ b/.env_docker
@@ -1,4 +1,4 @@
-SECRET_KEY='secret'
+SECRET_KEY='django-insecure-&j&(4fi@lq##1=t9++$+4%iw+*e49zm^ky!hj=9n-1n%o&8v84'
 DEBUG=True
 
 POSTGRES_DB=postgres
