--- a/.env.docker
+++ b/.env.docker
@@ -1,10 +1,11 @@
 SECRET_KEY='django-insecure-&j&(4fi@lq##1=t9++$+4%iw+*e49zm^ky!hj=9n-1n%o&8v84'
-DEBUG=True
+DEBUG=False
 
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=db
+POSTGRES_HOST=localhost
+#POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
-REDIS_URL='redis://redis:6379/10'
+REDIS_URL='redis://127.0.0.1:6379/10'
