--- a/.env.docker
+++ b/.env.docker
@@ -4,8 +4,7 @@ DEBUG=False
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
-#POSTGRES_HOST=db
+POSTGRES_HOST=db
 POSTGRES_PORT=5432
 
 REDIS_URL='redis://127.0.0.1:6379/10'
